--- a/mobile_app/jl-streaming/package.json
+++ b/mobile_app/jl-streaming/package.json
@@ -26,10 +26,13 @@
     "@capacitor/assets": "^2.0.4",
     "@capacitor/camera": "^5.0.7",
     "@capacitor/core": "5.2.3",
+    "@capacitor/filesystem": "^5.1.2",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
+    "@capacitor/preferences": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
+    "@ionic/pwa-elements": "^3.2.2",
     "ionicons": "^7.0.0",
     "ngx-socket-io": "^4.5.1",
     "rxjs": "~7.8.0",
