--- a/mobile_app/jl-streaming/package.json
+++ b/mobile_app/jl-streaming/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@capacitor-community/camera-preview": "^5.0.0",
     "@capacitor/android": "5.2.3",
     "@capacitor/app": "5.0.6",
     "@capacitor/assets": "^2.0.4",
