webcam easy added

--- a/mobile_app/jl-streaming/package.json
+++ b/mobile_app/jl-streaming/package.json
@@ -37,6 +37,7 @@
     "ngx-socket-io": "^4.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "webcam-easy": "^1.1.1",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
